# tensorflow-s3

./: .bazelrc  .bazelversion  .gitignore  BUILD.bazel  WORKSPACE.bazel  requirements-lock-3-10.txt  requirements-lock-3-11.txt  requirements-lock-3-12.txt  requirements.in
.github/workflows/: build-and-test.yaml  publish.yaml
tensorflow_s3/: BUILD.bazel
tensorflow_s3/core/filesystems/: BUILD.bazel  filesystem_plugins.cc
tensorflow_s3/core/filesystems/s3/: BUILD.bazel  aws_logging.cc  s3_filesystem.cc
tools/: whl.bzl
